# laura-ruis-test

./: .gitignore  evaluation.ipynb  generate_data.py  plan.md  pyproject.toml  report.md  results.json  task.md  train.ipynb  train.py
